tdf#141467 xmloff,sc,sw: ODF export: reorder flys' ZOrder/z-index harder

Also keep the control layer distinct from the foreground, as a follow-up
to tdf#133487.

Try to improve the detection of already sorted indexes a bit to avoid
unnecessary sorting.

Hilariously the test docs require adding 3 additional items to the
extension schema.

Change-Id: I629d5b09294f679717677b9d89537d905ac4c404